# bikeride

./: pyproject.toml  readme.md  setup.py
bikeride/: __init__.py  bikeride.py  knmi.py  oikolab.py  plot.py  weather.py
